<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="main_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="uri_terms_of_use">https://yandex.ru/legal/practicum_offer/</string>
    <string name="my_mail">mysterion1337@yandex.ru</string>
    <string name="support_subject_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="uri_share">https://practicum.yandex.ru/learn/android-developer/courses/43395269-905d-4d7a-81c5-fb123dcaf2c1/sprints/140035/topics/65a33fc6-5f85-46ff-8bf6-a4bde748fa13/lessons/e6dda1bb-2cfe-4f5f-a115-4592c3a6fa21/</string>
    <string name="update">Обновить</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="communication_problems">Проблемы со связью</string>
    <string name="the_download_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_search">Вы искали</string>
    <string name="no_data_available">Нет данных</string>
    <string name="duration">Длительность</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="album">Альбом</string>
    <string name="search_internet_error">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="featured_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_featured_tracks">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="exit_title">Завершить создание плейлиста?</string>
    <string name="exit_message">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="trackss">%d треков</string>
    <string name="track">%d трек</string>
    <string name="tracks">%d трека</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="playlist_added">Добавлено в плейлист %s</string>
    <string name="playlist_not_added">Трек уже добавлен в плейлист %s</string>
    <string name="playlist_info">%1$s минут · %2$s</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать инфорацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист \«%1$s\»?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="no_track_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="emplty_playlist">В плейлисте нет треков</string>


</resources>