<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="?attr/colorPrimaryDark">


    <FrameLayout
        style="@style/TitleLayoutStyle">
        <TextView
            android:paddingLeft="@dimen/indent_normal"
            android:text="@string/main_name"
            android:textColor="@color/white"
            style="@style/TitleText"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="8dp">
    </FrameLayout>
    <FrameLayout
        style="@style/MainButtonLayoutStyle">

        <Button
            android:id="@+id/button_search"
            android:text="@string/search"
            app:icon="@drawable/search"
            style="@style/MainButtonStyle"/>

    </FrameLayout>

    <FrameLayout
        style="@style/MainButtonLayoutStyle">

            <Button
                android:id="@+id/button_media"
                android:text="@string/media_library"
                app:icon="@drawable/library"
                style="@style/MainButtonStyle"/>

    </FrameLayout>

    <FrameLayout
        style="@style/MainButtonLayoutStyle">

            <Button
                android:id="@+id/button_settings"
                android:text="@string/settings"
                app:icon="@drawable/settings"
                style="@style/MainButtonStyle"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/indent_layout">
    </FrameLayout>

</LinearLayout>