<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            tools:context=".SettingsActivity">

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/back"
                android:paddingLeft="@dimen/indent_normal"
                android:paddingRight="24dp"
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_big"
            />

        </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/strings_indent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/dark_theme"
            android:paddingLeft="@dimen/indent_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small"
            />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/indent_normal"
            android:switchMinWidth="52dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/strings_indent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:paddingLeft="@dimen/indent_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/indent_normal"
            app:srcCompat="@drawable/share" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/strings_indent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/support"
            android:paddingLeft="@dimen/indent_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/indent_normal"
            app:srcCompat="@drawable/support" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/strings_indent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/terms_of_use"
            android:paddingLeft="@dimen/indent_normal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/indent_normal"
            app:srcCompat="@drawable/pointer" />

    </FrameLayout>

</LinearLayout>