<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/BackImageStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_indent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TitleText"
        android:layout_height="@dimen/title_indent"
        android:text="@string/new_playlist"
        app:layout_constraintStart_toEndOf="@+id/iv_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:adjustViewBounds="true"
        android:background="@drawable/playlist_cover"
        android:contentDescription="@string/new_playlist"
        android:maxHeight="312dp"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:srcCompat="@drawable/add_photo"
        tools:layout_editor_absoluteX="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16dp_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16dp_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_box"
        style="@style/new_playlist_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_name"
        app:cursorColor="@color/semi_blue"
        app:layout_constraintEnd_toEndOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start"
        app:layout_constraintTop_toBottomOf="@id/image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name"
            style="@style/new_playlist_text_field"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_box"
        style="@style/new_playlist_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_normal"
        android:hint="@string/playlist_description"
        app:cursorColor="@color/semi_blue"
        app:layout_constraintEnd_toEndOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description"
            style="@style/new_playlist_text_field"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp32"
        android:backgroundTint="@drawable/button_add_playlist"
        android:fontFamily="@font/ys_display_medium"
        android:paddingVertical="14dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        android:textFontWeight="500"
        android:textSize="@dimen/text_small"
        app:cornerRadius="@dimen/indent_music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toEndOf="@id/guideline_16dp_start" />


</androidx.constraintlayout.widget.ConstraintLayout>