<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/search_layout_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playlist_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/playlist_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="false"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:backgroundTint="#00000000"
            android:foreground="?attr/selectableItemBackground"
            style="@style/BackImageStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_indent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/indent_normal" />

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_layout"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/search_error_image_color"
            android:textFontWeight="700"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playlist_cover"
            tools:text="[Playlist name]" />

        <TextView
            android:id="@+id/playlist_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_music"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/search_error_image_color"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playlist_name"
            tools:text="[Playlist description]" />

        <TextView
            android:id="@+id/playlist_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_music"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/search_error_image_color"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playlist_description"
            tools:text="[300 минут · 98 треков]" />

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="@dimen/indent_layout"
            android:layout_height="@dimen/indent_layout"
            android:layout_marginTop="@dimen/indent_normal"
            android:backgroundTint="@color/search_layout_color"
            android:src="@drawable/share"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playlist_info"
            app:tint="@color/search_error_image_color" />

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="@dimen/indent_layout"
            android:layout_height="@dimen/indent_layout"
            android:layout_marginStart="@dimen/indent_normal"
            android:layout_marginTop="@dimen/indent_normal"
            android:backgroundTint="@color/search_layout_color"
            android:src="@drawable/three_dots"
            app:layout_constraintStart_toEndOf="@id/share_button"
            app:layout_constraintTop_toBottomOf="@id/playlist_info"
            app:tint="@color/search_error_image_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:clickable="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_music"
            android:background="@drawable/holder" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/list_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/indent_normal"
                android:layout_marginTop="@dimen/indent_normal"
                android:layout_marginBottom="52dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/nothing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_normal"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/emplty_playlist"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playlists_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="450dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_music"
            android:background="@drawable/holder" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_music_card"
            android:background="?attr/colorOnPrimarySurface"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playlist_small_cover"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="@dimen/indent_music"
                android:src="@drawable/placeholder"
                app:layout_constraintDimensionRatio="1:1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?attr/colorOnPrimarySurface"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playlist_small_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="@dimen/text_small"
                    tools:text="[Playlist name]" />

                <TextView
                    android:id="@+id/playlist_small_tracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="11sp"
                    tools:text="[157 треков]" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:paddingHorizontal="@dimen/indent_normal"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/share_playlist"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/edit_playlist"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:paddingHorizontal="@dimen/indent_normal"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/edit_playlist"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/delete_playlist"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:paddingHorizontal="@dimen/indent_normal"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/delete_playlist"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>